[project]
name = "comfyui-textarea-keybindings"
description = "Add keybindings to textarea."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-textarea-keybindings"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-textarea-keybindings"
Icon = ""
